web/app/assets/stylesheets/assignments.css.scss
// Place all the styles related to the Assignments controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

/* Assignment Show */
$success-color: #80bd41;

body {
  background-color: #f2f2f2;
}
.assignment-header {
  background-color: #2ba6cb;
  width: 100%;
  max-width: 100%;
  padding-top: 1.2em;
  color: #fff;
  text-shadow: rgba(0, 0, 0, 0.3) 0 1px 1px;
}

.question-text {
  font-size: 3em;
  padding: 1.5em 0.5em 0.5em 0.5em;
  text-align: center;
}

.continue {
  margin-top: 1.6em;
  text-align: center;
  background-image: image-url('bg.png');
}

.continue-fieldset {
  padding: 6em 2.5em 2em 2.5em;
  height: 25.15em;
}

.congrats {
  padding: 1.5em;
}

.progress {
  /*margin-top: 0.7em;*/
}

.streaks {
  h4 {
    padding-left: 0.6em;
    padding-bottom: 0.3em;
  }
  background-image: image-url('bg.png');
  // padding: 3em;
}

#difficult {
  text-align: center;
  margin-top: 1em;
}

.difficult {
  background-image: image-url('bg.png');
}

#progress {
}

#streaks {
  margin-top: 1em;
}

.previous-question {
  border: 1px solid #ddd;
  margin-top: 1.6em;
  height: 6em;
  background-image: image-url('bg.png');
}

.previous-correct {
  padding-top: -5em;
  text-align: center;
  height: 6em;
}

.previous-start {
  height: 6em;
  margin-bottom: 1.28em;
}

.question-fieldset {
  background-image: image-url('bg.png');
  height: 25.55em;
}

.correct-message {
  display: inline;
}

.fa-check {
  color: $success-color;
}

.previous-incorrect {
  background-color: #fff;
}

.previous-start {
  text-align: center;
  padding-top: 1.55em;
}

.transition-enter {
  opacity: 0.01;
  transition: opacity .5s ease-in;
}

.transition-enter.transition-enter-active {
  opacity: 1;
}

.transition-leave {
  opacity: 1;
  transition: opacity .5s ease-in;
}

.transition-leave.transition-leave-active {
  opacity: 0.01;
}

